Fixes icons making some items too tall.

--- a/tool-ui/src/main/webapp/style/cms.less
+++ b/tool-ui/src/main/webapp/style/cms.less
@@ -216,8 +216,7 @@
         display: inline-block;
         font-family: 'FontAwesome';
         font-size: 20px;
-        height: 20px;
-        line-height: 20px;
+        line-height: 0;
         margin-right: 4px;
         .opacity(0.8);
         vertical-align: middle;
@@ -240,7 +239,7 @@
     &:before {
         float: right;
         margin-left: 4px;
-        margin-top: 1px;
+        margin-top: 11px;
     }
 }
 
